fixes viewport height on mobile devices

--- a/Day_17_IP_Address/style.css
+++ b/Day_17_IP_Address/style.css
@@ -5,7 +5,8 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     justify-content: center;
     align-items: center;
